--- a/css/index.css
+++ b/css/index.css
@@ -64,5 +64,10 @@ body {
     width: 10px;
     height: 10px;
     background-color: aquamarine;
-    
+    margin: 20px;
+    border-radius: 20px;
+}
+
+.dots li .active {
+    width: 30px;
 }
