--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,7 @@ body {
     height: 100%;
     display: flex;
     width: max-content;
+    transition: 1s;
 }
 
 .list img {
@@ -48,7 +49,7 @@ body {
 }
 
 .dots {
-    position: relative;
+    position: absolute;
     bottom: 10px;
     color: azure;
     left: 0;
@@ -66,8 +67,9 @@ body {
     background-color: aquamarine;
     margin: 20px;
     border-radius: 20px;
+    transition: 1s;
 }
 
-.dots li .active {
+.dots li.active {
     width: 30px;
 }
